crates/vite_task_graph/tests/snapshots/snapshots__query - ambiguous task name@transitive-dependency-workspace.snap
---
source: crates/vite_task_graph/tests/snapshots.rs
expression: err
input_file: crates/vite_task_graph/tests/fixtures/transitive-dependency-workspace
---
AmbiguousPackageName {
    package_name: "@test/a",
    package_paths: [
        AbsolutePath(
            "//?/workspace/packages/a",
        ),
        AbsolutePath(
            "//?/workspace/packages/another-a",
        ),
    ],
}
