crates/vite_task_graph/tests/snapshots/snapshots__query - under subfolder of package@transitive-dependency-workspace.snap
---
source: crates/vite_task_graph/tests/snapshots.rs
expression: execution_graph_snapshot
input_file: crates/vite_task_graph/tests/fixtures/transitive-dependency-workspace
---
[
  {
    "task": {
      "package_dir": "packages/a",
      "task_name": "build"
    },
    "deps": [
      {
        "package_dir": "packages/a",
        "task_name": "test"
      }
    ]
  },
  {
    "task": {
      "package_dir": "packages/a",
      "task_name": "test"
    },
    "deps": []
  }
]
